--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Hero</title>
 </head>
 <body>
@@ -13,6 +14,9 @@
       <nav class="nav">
           <div class="container header_container">
             <a href="#" class="logo"><img src="img/Logo.svg" alt="Logo"></a>
+            <div class="nav__menu">
+                <span class="nav__line"></span>
+            </div>
               <ul class="list">
                   <li class="item">
                       <a href="" class="link">Home</a>
@@ -57,12 +61,12 @@
 
  <section class="video">
  <div class="container">
-         <div class="cards">
-         <div class="desc">
+         <div class="video__cards">
+         <div class="video__desc">
              <p class="video_txt">About Our Agency</p>
              <h3 class="video_title">We create awesome prototypes, plugins, and templates.</h3>
              <p class="video_txt_2">For instance, whenever I go back to the guest house during the morning to copy out the contract, these gentlemen are always still sitting there eating their breakfasts.</p>
-        <div class="play_video">
+        <div class="play__video">
              <div class="play">
                  <a href="#"><img src="img/play_circle_filled_24px.svg" alt=""></a>
              </div>
@@ -71,7 +75,7 @@
             </div>
         </div> 
     </div>  
-         <img src="img/Frame 1.png" alt="Picture" >
+         <img src="img/Frame 1.png" alt="Picture" class="section__banner" >
     </div>     
  </div>
  </section>
