--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="container">
         <p class="main_bottom_txt">Updates & News</p>
         <h3 class="main_bottom_title">Recent Blog Posts</h3>
-        <div class="cards">
+        <div class="main-bottom__cards">
             <div class="card">
                 <img src="img/Frame 2.png" alt="">
                 <p class="main_bottom_txt_1">OPINION</p>
